// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when creating a venue 1`] = `
<React.Fragment>
  <Image
    entityType="venue"
    showCarousel={false}
  />
  <EntityHeading>
    New Venue
  </EntityHeading>
  <EntityDetailsContainer
    type="default"
  >
    <Connect(ReduxForm)
      initialValues={
        Object {
          "id": 1,
        }
      }
      isEdit={false}
      onCancel={[Function]}
      onSubmit={[Function]}
    />
  </EntityDetailsContainer>
</React.Fragment>
`;

exports[`should render correctly when editing a venue 1`] = `
<React.Fragment>
  <Image
    entityType="venue"
    images={Array []}
    showCarousel={false}
  />
  <EntityHeading>
    New Venue
  </EntityHeading>
  <EntityDetailsContainer
    type="default"
  >
    <Connect(ReduxForm)
      initialValues={
        Object {
          "id": 1,
        }
      }
      isEdit={true}
      onCancel={[Function]}
      onSubmit={[Function]}
    />
  </EntityDetailsContainer>
</React.Fragment>
`;
